# claude-remote

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  run.py  test_question_detection.py
claude_remote/: __init__.py  claude_executor.py  config.py  file_watcher.py  git_diff_watcher.py  hash_file_watcher.py  main.py  project_manager.py  simple_file_watcher.py  slack_notifier.py
docker/: Dockerfile  docker-compose.yml
